--- a/index.html
+++ b/index.html
@@ -3,7 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital@1&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Nima Aram</title>
   </head>
-  <body></body>
+  <body>
+    <div class="bg-stone-800 p-3 main h-screen flex flex-col justify-end">
+      <div class="h-4/6">
+        <h1 class="font-bold text-6xl text-center text-stone-200 ff">
+          Nima Aram
+        </h1>
+        <h2 class="text-center text-xl font-light text-stone-300">
+          Junior backend developer
+        </h2>
+        <div class="flex w-full justify-center mt-10">
+          <div
+            class="mx-2 p-2 rounded-full bg-stone-700 w-14 h-14 flex justify-center items-center"
+          >
+            <a href="https://github.com/nimaram"
+              ><i
+                class="hover:text-stone-400 transition text-stone-500 fa fa-brands fa-github text-5xl"
+              ></i
+            ></a>
+          </div>
+          <div
+            class="mx-2 p-2 rounded-full bg-stone-700 w-14 h-14 flex justify-center items-center"
+          >
+            <a href="https://www.linkedin.com/in/nima-aram-6579a2218/"
+              ><i
+                class="text-stone-500 hover:text-stone-400 transition fa fa-brands fa-linkedin text-4xl"
+              ></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
